[gd_scene load_steps=2 format=3 uid="uid://dhg8caguiut4g"]

[ext_resource type="Script" uid="uid://pe6wunjvldpd" path="res://EmployeeConversation.gd" id="1_udwg0"]

[node name="EmployeeConversation" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udwg0")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -95.5
offset_right = 142.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "\"Can i get a promotion?\""

[node name="ChoiceAButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "\"Absolutely!\"

"

[node name="ChoiceBButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "\"We have no Budget\"

"
